--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -4,14 +4,21 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{{ title }}</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="{{ '/css/style.css' | url }}" />
 </head>
 <body>
-	<header>
-		<h1>{{ title }}</h1>
-	</header>
-	<main>
+	<main class="scene-{% if page.fileSlug %}{{ page.fileSlug }}{% else %}primary{% endif %}">
 	{{ content | safe }}
 	</main>
+	<header>
+		<div id="title">
+			<h1>@5t3ph > Stephanie Eckles</h1>
+			<p>ModernCSS.dev • StyleStage.dev<br>SmolCSS.dev • 11ty.Rocks</p>
+			<strong>buymeacoffee.com/moderncss</strong>
+		</div>
+		<div id="captions"></div>
+	</header>
 </body>
 </html>
