--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,7 +1,6 @@
 @use "layout";
 @use "primary";
 @use "host";
-@use "preshow";
-@use "postshow";
+@use "fullscreens";
 @use "slideshow";
 @use "commands";
