🎥 Add scenes for "guest" and "guest-host"

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,8 @@
 @use "layout";
 @use "primary";
 @use "host";
+@use "guest";
+@use "guest-host";
 @use "fullscreens";
 @use "slideshow";
 @use "commands";
